@@ -22,6 +22,20 @@ After taking the details of the blocks and lines, the model is drawn and shown.
 
 ##### To use the Seimulinlk Viewer, you have two ways:
 
+
+######  Using VsCode:
+
+Make sure you jave downloaded sdk for javaFx from this link https://gluonhq.com/products/javafx/
+
+The steps to run the this code is:
+1- Download .zip file.	
+2- Open the folder using VScode
+3- Add Javafx Refrence libraries usually they are in this path "javafx-sdk-20\lib"
+4- Create launch.json file in .vscode folder
+5- Add vm options like this (  "vmArgs": "--module-path <JavaFX_lib_path> --add-modules javafx.controls,javafx.fxml",  )  
+6- Run the code from main funtions
+7- You can find these steps on javafx in the documentation website through this link https://openjfx.io/openjfx-docs/#next-steps
+
  
 ## Tools Used
 
